# pgwho

./: CMakeLists.txt  plasma-pgwho.desktop
src/: PgWho.cpp  PgWho.h  WidgetConfig.cpp  WidgetConfig.h
